--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -1,7 +1,7 @@
 <resources>
 
     <!-- Base application theme. -->
-    <style name="AppTheme" parent="Theme.AppCompat.Light.DarkActionBar">
+    <!-- <style name="AppTheme" parent="Theme.AppCompat.Light.DarkActionBar">
 
      Customize your theme here.
         <item name="colorPrimary">@color/colorPrimary</item>
@@ -9,12 +9,24 @@
         <item name="colorAccent">@color/colorAccent</item>
 
 
+    </style> -->
+
+    <style name="Jai" parent="Theme.AppCompat.Light.DarkActionBar" >-->
+        <item name="android:colorForeground">@android:color/holo_blue_dark</item>
+        <item name="android:navigationBarColor">?android:attr/textColorLink</item>
+        <item name="android:textColorPrimary">@android:color/black</item>
+        <item name="colorPrimary">@android:color/holo_blue_dark</item>
+        <item name="colorPrimaryDark">@color/colorPrimaryDark</item>
+        <item name="colorAccent">@android:color/holo_blue_dark</item>
+        <item name="android:colorBackground">@android:color/background_light</item>
+        <item name="android:statusBarColor">@android:color/holo_blue_light</item>
+        <item name="android:textColorPrimaryInverse">@android:color/background_dark</item>
+        <item name="android:textColorSecondary">@android:color/black</item>
+        <item name="android:windowBackground">@android:color/background_light</item>
     </style>
 
-    <!--<style name="Jai" parent="Theme.AppCompat.Light.NoActionBar" >-->
-        <!--<item name="android:colorForeground">@android:color/holo_blue_bright</item>-->
-        <!--<item name="android:navigationBarColor">@android:color/holo_blue_dark</item>-->
-        <!--<item name="android:textColorPrimary">@android:color/holo_green_dark</item>-->
-    <!--</style>-->
+
+
+
 
 </resources>
