TungbadraDam Final Version 1.2~App URL Update

--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -11,7 +11,7 @@
 
     </style> -->
 
-    <style name="Jai" parent="Theme.AppCompat.Light.DarkActionBar" >-->
+    <style name="Jai" parent="Theme.AppCompat.Light.NoActionBar" >-->
         <item name="android:colorForeground">@android:color/holo_blue_dark</item>
         <item name="android:navigationBarColor">?android:attr/textColorLink</item>
         <item name="android:textColorPrimary">@android:color/black</item>
